--- a/openshift/build.yaml
+++ b/openshift/build.yaml
@@ -13,10 +13,10 @@ objects:
       - annotations: null
         from:
           kind: DockerImage
-          name: 'tomcat:9.0.27-jdk8-openjdk'
+          name: 'tomcat:${TOMCAT_IMAGE_TAG}-jdk8-openjdk'
         generation: 1
         importPolicy: {}
-        name: 9.0.27-jdk8-openjdk
+        name: ${TOMCAT_IMAGE_TAG}-jdk8-openjdk
         referencePolicy:
           type: Local
   status:
@@ -43,14 +43,14 @@ objects:
     creationTimestamp: null
     labels:
       build: ${NAME}
-    name: ${NAME}${SUFFIX}
+    name: ${NAME}-${BUILD_SUFFIX}
   spec:
     nodeSelector: null
     runPolicy: SerialLatestOnly
     output:
       to:
         kind: ImageStreamTag
-        name: ${NAME}:${OUTPUT_IMAGE_TAG}
+        name: ${NAME}:${TOMCAT_IMAGE_TAG}-${TAG_SUFFIX}
     postCommit: {}
     resources: {}
     source:
@@ -64,7 +64,7 @@ objects:
         imageOptimizationPolicy: SkipLayers
         from:
           kind: ImageStreamTag
-          name: tomcat9:9.0.27-jdk8-openjdk
+          name: tomcat9:${TOMCAT_IMAGE_TAG}-jdk8-openjdk
       type: Docker
     triggers:
     - type: ConfigChange
@@ -76,18 +76,17 @@ parameters:
 - description: Name used for all created objects
   displayName: Name
   name: NAME
-  required: true
   value: ha-tomcat9
-- description: A suffix appended to all objects
-  name: SUFFIX
-  value: -build
-- name: TOMCAT_IMAGE_TAG
+- description: A suffix appended to the build object.
+  name: BUILD_SUFFIX
+  value: build
+- description: A suffix applied to the image's tag.
+  name: TAG_SUFFIX
+  value: latest
+- description: The tag of the base Tomcat image.
+  name: TOMCAT_IMAGE_TAG
   value: "9.0.27"
-- name: OUTPUT_IMAGE_TAG
-  value: "9.0.27-build"
 - name: SOURCE_GIT_URL
-  required: true
   value: https://github.com/BCDevOps/ha-tomcat9.git
 - name: SOURCE_GIT_REF
-  required: false
   value: master
